# ezored

./: .clang-format  .cmake-format  .editorconfig  .gitignore  .travis.yml  LICENSE.md  README.md  appveyor.yml  make.py  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: android.yml  build_cmake.yml  docs.yml  ezored.yml  ios.yml  linux.yml  macos.yml  windows.yml
extras/docs/: APPLE.md  CODE-TOOLS.md  COMMANDS.md  DISTRIBUTION.md  FREE.md  GLUECODE.md  HOW-TO-USE.md  MODULES.md  OTHER-PROJECTS.md  PLATFORMS.md  PROJECTS.md  REQUIREMENTS.md  SPONSORS.md  SUPPORTERS.md  TARGETS.md  TRAINING.md  TROUBLESHOOTING.md
ezored/: commands.py  constants.py  functions.py  logging.py
ezored/mod/: command.py  file.py  log.py  net.py  pack.py  runner.py  target.py  util.py
files/cmake/common/: CMakeLists.txt
files/cmake/toolchains/: ios.cmake
files/commands/: clean.py  code.py  conan.py  dist.py  djinni.py  docs.py  gluecode.py  help.py  target.py
files/commands/clang/: clang.py
files/commands/clean/: clean.py
files/commands/conan/: conan.py
files/commands/djinni/: djinni.py
files/commands/help/: help.py
files/common/cmake/: CMakeLists.txt  common.cmake  functions.cmake
files/common/conan/darwin-toolchain/: .gitignore  README.md  build.py  conanfile.py
files/config/: djinni.py  docs.py  gluecode.py  project.py  target_android.py  target_android_aar.py  target_ios.py  target_ios_framework.py  target_linux.py  target_linux_app.py  target_macos.py  target_macos_app.py  target_test.py  target_tests.py  target_windows.py  target_windows_app.py
files/core/: aws.py  bootstrap.py  command.py  const.py  ezored.py  file.py  gluecode.py  log.py  module.py  net.py  pack.py  runner.py  target.py  util.py
files/djinni/: djinni_modules.py  modules.py
files/djinni/001-app-domain/: generate.py
files/djinni/001-app-domain/yaml/: customer.yaml  device_data.yaml  response.yaml  response_error.yaml
files/djinni/002-app-core/: proj.djinni
files/djinni/003-app-data-services/: generate.py  proj.djinni
files/djinni/004-app-system-service/: generate.py  proj.djinni
files/djinni/005-app-helpers/: proj.djinni
files/djinni/005-app-helpers/yaml/: todo_helper.yaml
files/djinni/app-core/: generate.py
files/djinni/app-data-services/: generate.py
files/djinni/app-data-services/yaml/: todo_data_service.yaml
files/djinni/app-domain/: generate.py  proj.djinni
files/djinni/app-enums/: generate.py
files/djinni/app-enums/yaml/: customer_status_enum.yaml
files/djinni/app-helpers/: generate.py  proj.djinni
files/djinni/app-helpers/yaml/: customer_helper.yaml  environment_helper.yaml  shared_data_helper.yaml  todo_helper.yaml
files/djinni/app-system-services/: generate.py
files/djinni/app-system-services/yaml/: customer_system_service.yaml  customer_system_service_login_data.yaml
files/djinni/datetime/: generate.py  proj.djinni
files/djinni/datetime/yaml/: date_time.yaml
files/djinni/file-helper/: generate.py  proj.djinni
files/djinni/http-client/: generate.py  proj.djinni
files/djinni/http-client/yaml/: http_client_platform_service.yaml  http_header.yaml  http_request.yaml  http_request_param.yaml  http_response.yaml
files/djinni/httpclient/: generate.py  proj.djinni
files/djinni/httpclient/yaml/: http_client_logger.yaml
files/djinni/logger/: generate.py  proj.djinni
files/djinni/logger/yaml/: logger.yaml  logger_level.yaml  logger_platform_service.yaml
files/djinni/shared-data/: generate.py  proj.djinni
files/djinni/shared-data/yaml/: shared_data.yaml  shared_data_platform_service.yaml
files/djinni/string-helper/: generate.py  proj.djinni
files/djinni/string-helper/yaml/: string_helper.yaml
files/docs/default/: mkdocs.yml
files/docs/default/docs/: about.md  apple.md  code-tools.md  commands.md  distribution.md  documentation.md  glue-code.md  how-to-start.md  how-to-use.md  index.md  libraries.md  modules.md  other-projects.md  platforms.md  projects.md  requirements.md  sponsors.md  targets.md  tests.md  training.md  troubleshooting.md
files/gluecode/app-core/: generate.py  proj.djinni
files/gluecode/app-data-services/: generate.py  proj.djinni
files/gluecode/app-domain/: generate.py  proj.djinni
files/gluecode/app-domain/yaml/: initialization_data.yaml  todo.yaml
files/gluecode/app-enums/: generate.py
files/gluecode/app-helpers/: generate.py
files/gluecode/app-helpers/yaml/: security_helper.yaml
files/gluecode/app-system-services/: generate.py
files/gluecode/datetime/: generate.py
files/gluecode/file-helper/: generate.py
files/gluecode/http-client/: generate.py
files/gluecode/http-client/yaml/: http_client.yaml  http_request.yaml  http_response.yaml
files/gluecode/logger/: generate.py
files/gluecode/shared-data/: generate.py  proj.djinni
files/gluecode/string-helper/: generate.py
files/modules/: aws.py  command.py  const.py  ezored.py  file.py  gluecode.py  net.py  pack.py  runner.py  target.py  util.py
files/modules/app-core/cmake/: module.cmake
files/modules/app-core/gluecode/: generate.py  proj.djinni
files/modules/app-data-services/cmake/: module.cmake
files/modules/app-data-services/gluecode/: generate.py  proj.djinni
files/modules/app-domain/cmake/: module.cmake
files/scripts/: strip-framework.sh
files/targets/android/cmake/: CMakeLists.txt  ndk-stl-config.cmake
files/targets/android_aar/cmake/: CMakeLists.txt
files/targets/ios/cmake/: CMakeLists.txt
files/targets/ios_framework/cmake/: CMakeLists.txt
files/targets/linux_app/cmake/: CMakeLists.txt
files/targets/macos/cmake/: CMakeLists.txt
files/targets/macos_app/cmake/: CMakeLists.txt
files/targets/windows/cmake/: CMakeLists.txt
files/targets/windows_app/cmake/: CMakeLists.txt
projects/android/Sample/: .editorconfig  .gitignore  Makefile  build.gradle  settings.gradle
projects/ios/: .gitignore
projects/ios/Sample/: .gitignore  Gemfile  Makefile  Podfile
projects/samples/simple/: main.cpp
projects/web/Sample/: README.md  package.json  vue.config.js
(+1241 files in other folders)
